상품 api 유효성 검증까지 응답과 요청 성공 확인완료