@@ -8,8 +8,6 @@ group = 'camp.nextstep.edu'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
@@ -19,60 +17,24 @@ repositories {
     mavenCentral()
 }
 
-/**
- * implementation : 컴파일 및 런타임 모두에서 사용하는 의존성
- * compileOnly : 컴파일 시에만 필요
- * runtimeOnly : 런타임 시에만 필요
- * **/
 dependencies {
-    runtimeOnly 'mysql:mysql-connector-java:8.0.30' // MySQL 드라이버 의존성 추가
-
-    // JPA
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-    // Spring boot
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect') // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
-    // test
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // h2 DB
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-test {
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
-}
-
-bootRun {
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += '--add-opens'
-    jvmArgs += 'java.base/java.lang=ALL-UNNAMED'
-    jvmArgs += '--add-opens'
-    jvmArgs += 'java.base/java.util=ALL-UNNAMED'
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += '--add-opens'
-    jvmArgs += 'java.base/java.lang=ALL-UNNAMED'
-    jvmArgs += '--add-opens'
-    jvmArgs += 'java.base/java.util=ALL-UNNAMED'
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
 }
